--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -1,8 +1,8 @@
 name: Pre-Release LinUtil
 
 permissions:
-  contents: write  # Grant write permissions to contents
-  packages: write  # Grant write permissions to packages
+  contents: write # Grant write permissions to contents
+  packages: write # Grant write permissions to packages
 
 on:
   workflow_dispatch: # Manual trigger added
@@ -30,7 +30,7 @@ jobs:
           body: "![GitHub Downloads (specific asset, specific tag)](https://img.shields.io/github/downloads/ChrisTitusTech/linutil/${{ env.version }}/linutil)"
           append_body: false
           files: |
-            ./build/release/linutil
+            ./build/x86_64-unknown-linux-musl/release/linutil
           prerelease: true
           generate_release_notes: true
         env:
