fix: Correctly render unicode characters which take up multiple columns

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ratatui = "0.27.0"
 tui-term = "0.1.12"
 include_dir = "0.7.4"
 tempdir = "0.3.7"
+unicode-width = "0.1.13"
 
 [[bin]]
 name = "linutil"
